syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "demo_system_user_module";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserReply);
  rpc FindUser (FindUserRequest) returns (UserReply);
  rpc LoginUser (LoginUserRequest) returns (UserReply);

}

// The request message containing the user's name.
message CreateUserRequest {
  string name = 1;
  optional string email = 2;
}

message Login {
  string method = 1;
  optional google.protobuf.Any data = 2;
  optional string imageUrl = 3;
}

message FindUserRequest {
  optional string name = 1;
  optional string email = 2;
  optional string loginMethod = 3;
}

message LoginUserRequest {
  uint32 id = 1;
  Login login = 2;
}

// The response message containing the greetings.
message UserReply {
  uint32 id = 1;
  string name = 2;
  string email = 3;
}